fix controls being right up against the page on mobile screens

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -110,6 +110,9 @@ button {
   align-items: center;
 
   gap: var(--thin-gap);
+
+  margin-top: 28px;
+  margin-bottom: 28px;
 }
 
 
